# quad_sifter

./: CMakeLists.txt  quad_sifter.cpp
src/: quad_sifter.cpp
